# llm-manager

./: .env  .gitignore  CLAUDE.md  README.md  openclaude-proxy.py
.github/workflows/: build.yaml  reset-uat-db.yaml
agent/: .env.example  Dockerfile  Dockerfile.amd  README.md  compose.yaml  docker-compose.amd.yml  docker-compose.yml  entrypoint.sh  install.sh  main.py  ollama.env.example  requirements.txt
agent/tls/: cert.pem  ip.txt  key.pem
backend/: Dockerfile  agent_runner.py  agent_version_compare.py  api_keys.py  auth.py  cloud_providers.py  config.py  db.py  gpu.py  leader_election.py  library.py  library_routes.py  llm_agent.py  main.py  moltbook_client.py  pyproject.toml  queue_db.py  queue_models.py  queue_policy.py  queue_routes.py  queue_strategies.py  requirements.txt  result_slim.py  runner_client.py  scheduler.py  scheduler_v2.py  scheduler_worker.py  test_backend.py  test_leader_election.py  test_queue.py  test_queue_strategies.py  test_result_slim.py  test_runner_diagnostics.py  test_scheduler_v2.py
deploy/: README.md  llm-manager-backend.resources.yaml  scheduler-deployment.yaml.example  scheduler-rbac.yaml.example
frontend/: Dockerfile  index.html  nginx.conf  vite.config.ts
gitops/: ingress.yaml  middleware.yaml  namespace.yaml  servicemonitor.yaml
moltbook-backend/: Dockerfile  agent_runner.py  config.py  db.py  main.py  moltbook_client.py
piper-agent/: Dockerfile  main.py  requirements.txt
plans/: scheduler-consolidation-plan.md
scripts/: reset-uat.py  reset-uat.sh
ui/: Dockerfile  nginx.conf  package.json  tailwind.config.js
(+41 files in other folders)
