[project]
name = "llm-manager-backend"
version = "0"
description = "llm-manager API (FastAPI)"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "httpx==0.27.0",
    "pydantic==2.9.2",
    "toml==0.10.2",
    "asyncpg==0.29.0",
    "prometheus-client==0.20.0",
    "PyJWT==2.9.0",
    "cryptography==44.0.0",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
